# simulatoz

./: .gitignore  CMakeLists.txt  README.md  launcher.py
gazebo_plugins/: CMakeLists.txt  package.xml
gazebo_plugins/include/gazebo_plugins/: gazebo_ros_actuator.h  gazebo_ros_imu_direct.h
gazebo_plugins/src/: gazebo_ros_actuator.cpp  gazebo_ros_side_drive.cpp
oz440_description/: CMakeLists.txt  package.xml
oz440_description/models/Big_rock/: model.config  model.sdf
oz440_description/models/Cabbage/: model.config  model.dae  model.sdf
oz440_description/models/Friction_floor/: model.config  model.sdf
oz440_description/models/Grass/: model.sdf
oz440_description/models/Leek/: Poireau.dae  model.config  model.sdf
oz440_description/models/Mound/: model.config  model.sdf
oz440_description/models/Mound_cyl/: model.sdf
oz440_description/models/Red_stick/: PiquetRouge.dae  model.config  model.sdf
oz440_description/models/Rock/: model.sdf
oz440_description/models/Sign/: model.config  model.sdf
oz440_description/models/Small_Tree/: model.config  model.sdf
oz440_description/models/Tree/: lowpolytree.dae
oz440_description/models/Wheel/: pneu.dae  roue.dae
oz440_description/models/dirt_plane/: model.config  model.sdf
oz440_description/models/grass_plane/: model.sdf
oz440_description/models/heightmap/: model.sdf
oz440_description/models/my_ground_plane/: model.config  model.sdf
oz440_description/models/my_ground_plane_red/: model.config  model.sdf
oz440_description/models/sand_plane/: model.sdf
oz440_description/models/wall/: model.sdf
oz440_description/urdf/: macros.xacro  materials.xacro  oz440.gazebo  oz440.urdf  oz440.xacro  properties.xacro
oz440_gazebo/: CMakeLists.txt  package.xml
oz440_gazebo/include/: Bridge.hpp  Can.h  Core.hpp  DriverSerial.hpp  DriverSocket.hpp  Lidar.h  Metric.hpp  Naio01Server.hpp  Serial.h  Test.hpp  ThreadsafeQueue.hpp
oz440_gazebo/include/oz440_api/: ApiCameraExtrinsicsPacket.hpp  ApiCameraIntrinsicsPacket.hpp  ApiIhmAskEnumPacket.hpp  ApiLidarPacket.hpp  ApiStatusPacket.hpp  ApiStereoCameraPacket.hpp  CLBaseException.h  CLBuffer.hpp  HaCanPacket.hpp  HaDS4RemotePacket.hpp  HaGpsPacket.hpp  HaGyroPacket.hpp  HaKeypadPacket.hpp  HaLedPacket.hpp  HaLidarPacket.hpp  HaMagnetoPacket.hpp  Naio01Codec.hpp  Print.hpp  Utils.hpp
oz440_gazebo/include/oz440_socket/: ServerSocket.h
oz440_gazebo/launch/: CAB_70_20_GAP_1m.launch  CAB_70_20_GAP_1m_QUINCONCE.launch  CAB_70_20_GAP_3m.launch  CAB_70_20_GAP_4m.launch  CAB_70_20_GRASS.launch  CAB_70_20_NO_STICK.launch  CAB_70_30_PACKS_GRASS.launch  CAB_70_50_PACKS_GRASS.launch  CAB_70_70_SQUARE.launch  LEEK_200_100_VIGNE.launch  LEEK_50_70_SQUARE.launch  LEEK_70_15_GRASS.launch  LEEK_70_15_GRASS_FULL.launch  LEEK_70_15_GRASS_SIDE.launch  LEEK_70_15_GRASS_SIDE_FULL.launch  LEEK_70_15_PACKS_GRASS.launch  LEEK_70_25_GRASS.launch  LEEK_70_25_GRASS_SIDE.launch  LEEK_70_25_WIDER.launch  LEEK_70_25_ZIGZAG.launch  LEEK_70_30_GRASS_FULL.launch  LEEK_70_30_GRASS_SIDE_FULL.launch  LEEK_70_35_PACKS_GRASS.launch  LEEK_70_40_GRASS_10.launch  LEEK_70_40_GRASS_15.launch  LEEK_70_40_GRASS_20.launch  LEEK_70_40_GRASS_25.launch  LEEK_70_40_GRASS_5.launch  LEEK_70_40_GRASS_LINE.launch  LEEK_70_40_HEIGHTMAP.launch  LEEK_70_6_NO_STICK.launch  LEEK_70_70_SQUARE.launch  LEEK_70_8_GAP_1m.launch  LEEK_70_8_GAP_1m_QUINCONCE.launch  LEEK_70_8_GAP_3m.launch  LEEK_70_8_GAP_4m.launch  LEEK_70_8_GRASS.launch  cabbage1.launch  champ_sapins.launch  champ_sapins_1.launch  (+23 more)
oz440_gazebo/launch/LAAS_tests/: LEEK_50_30.launch  LEEK_70_100.launch  LEEK_70_150.launch  LEEK_70_175.launch  LEEK_70_200.launch  LEEK_70_30.launch  LEEK_70_30_G10.launch  LEEK_70_30_G15.launch  LEEK_70_30_G20.launch  LEEK_70_30_G25.launch  LEEK_70_30_G30.launch  LEEK_70_30_G35.launch  LEEK_70_30_G40.launch  LEEK_70_70.launch
oz440_gazebo/src/: Bridge.cpp  Camera.cpp  Can.cpp  Core.cpp  DriverSerial.cpp  DriverSocket.cpp  GeoAngle.cpp  Lidar.cpp  Metric.cpp  Naio01JoyClient.cpp  Naio01Server.cpp  Serial.cpp
oz440_gazebo/worlds/: CAB_70_50_PACKS_GRASS.world  LEEK_50_70_SQUARE.world  LEEK_70_15_GRASS.world  LEEK_70_15_GRASS_FULL.world  LEEK_70_15_GRASS_SIDE.world  LEEK_70_15_GRASS_SIDE_FULL.world  LEEK_70_15_PACKS_GRASS.world  LEEK_70_25_GRASS_SIDE.world  LEEK_70_25_WIDER.world  LEEK_70_25_ZIGZAG.world  LEEK_70_30_CURVE.world  LEEK_70_35_PACKS_GRASS.world  LEEK_70_40_GRASS_10.world  LEEK_70_40_GRASS_15.world  LEEK_70_40_GRASS_5.world  LEEK_70_40_GRASS_LINE.world  LEEK_70_70_SQUARE.world  LEEK_70_8_GAP_1m.world  LEEK_70_8_GAP_3m.world  LEEK_70_8_GAP_4m.world  LEEK_70_8_GRASS.world  cabbage1.world  champ_sapins.world  chou.world  empty.world  empty2.world  leek.world  level1.world  level1_no_gfx.world  level2.world  level2_no_gfx.world  level3.world  level3_no_gfx.world  my_world.world  piquet.world  red_leek.world  small.world  small_json.world  small_no_gfx.world  small_rocks.world  (+10 more)
oz440_gazebo/worlds/LAAS_tests/: LEEK_100_30_E30.world  LEEK_250_30.world  LEEK_350_30.world  LEEK_450_30.world  LEEK_70_100.world  LEEK_70_175.world  LEEK_70_30_G10.world  LEEK_70_30_G15.world  LEEK_70_30_G20.world  LEEK_70_30_G30.world  LEEK_70_30_G35.world  LEEK_70_30_R5.world  LEEK_70_30_Z10.world  LEEK_70_70.world  world_laas.py
oz440_msgs/: CMakeLists.txt  package.xml
oz440_msgs/msg/: Motors.msg  Screen.msg
oz440_socket/: CMakeLists.txt  package.xml
oz440_socket/include/oz440_socket/: ClientSocket.h  Socket.h
oz440_socket/src/: ClientSocket.cpp  ServerSocket.cpp  Socket.cpp
src/gazebo_plugins/: CMakeLists.txt
src/gazebo_plugins/src/: gazebo_leek_planter.cpp  gazebo_ros_actuator.cpp  gazebo_ros_imu_direct.cpp  gazebo_ros_my_laser.cpp  gazebo_ros_side_drive.cpp
src/oz440_api/: CMakeLists.txt
src/oz440_api/include/: ApiAutoStatusPacket.hpp  ApiCommandPacket.hpp  ApiEnumResponsePacket.hpp  ApiGprsPacket.hpp  ApiGpsPacket.hpp  ApiIhmAskEnumPacket.hpp  ApiIhmDisplayPacket.hpp  ApiLogToRobotPacket.hpp  ApiMotorsPacket.hpp  ApiMoveActuatorPacket.hpp  (+17 more)
src/oz440_gazebo/: CMakeLists.txt  package.xml
src/oz440_msgs/: CMakeLists.txt
(+361 files in other folders)
