<?xml version="1.0"?>
<package>
  <name>oz440_description</name>
  <version>0.0.0</version>
  <description>The oz440_description package</description>

  <maintainer email="vitaly@todo.todo">vitaly</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>


  <export>

  </export>
</package>