<?xml version="1.0"?>
<package>
  <name>oz440_gazebo</name>
  <version>0.0.1</version>
  <description>The oz440_gazebo package</description>

  <maintainer email="vitaly@todo.todo">vitaly</maintainer>

  <license>BSD</license>

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>oz440_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ApiCodec</build_depend>
  
  <run_depend>libApiCodec</run_depend>
 
</package>
