<?xml version="1.0"?>
<package>
  <name>oz440_msgs</name>
  <version>0.0.1</version>
  <description>The oz440_msgs package</description>

  <maintainer email="sallami.yoan@gmail.com">Yoan SALLAMI</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/oz440_msgs</url> -->
  <author email="sallami.yoan@gmail.com">Yoan SALLAMI</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
